<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.allmycode.lists.MainActivity"
    tools:ignore="MergeRootFrame">

    <TextView
        android:id="@+id/main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/show_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onShowListClick"
            android:text="@string/show_list" />

        <Button
            android:id="@+id/my_options_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onShowOtherOptionsClick"
            android:text="@string/my_options" />

    </LinearLayout>

</LinearLayout>
	

